--- a/Projetos/Clone-Netflix-exercicio/index.html
+++ b/Projetos/Clone-Netflix-exercicio/index.html
@@ -69,6 +69,6 @@
         <script src="js/owl/jquery.min.js"></script>
         <script src="js/owl/owl.carousel.min.js"></script>
         <script src="https://kit.fontawesome.com/017bd8e266.js" crossorigin="anonymous"></script>
-        <script src="js/owl/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
